Updated Quick start Docker Toolbox instructions